# fluids

./: .gitignore  Makefile  gridfluid.c  gridfluid.h  lb.pl  npraises.c  npraises.h  test.c  testgui.c
hs-fluids/: LICENSE  fluids.cabal  stack.yaml
hs-fluids/src/: Main.hs
lib/: ShittyObject.pm
lib/LB/: Grid.pm
